<resources>
    <string name="app_name">ADBPractice</string>
    <string name="action_settings">Settings</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_age">Age</string>
    <string name="label_click_event">Clicked: 0 times</string>
    <string name="hint_update_first_name">Update First Name</string>
    <string name="hint_update_last_name">Update Last Name</string>
    <string name="label_update">Update</string>

    <plurals name="numberOfComments">
        <item quantity="one">%d comment</item>
        <item quantity="other">%d comments</item>
    </plurals>
</resources>
