<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="human"
            type="com.aldoapps.adbpractice.twoway.HumanObservableField"/>

        <variable
            name="handler"
            type="com.aldoapps.adbpractice.twoway.ButtonClickedHandler"/>
    </data>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tv_first_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/label_first_name" />

        <TextView
            android:id="@+id/tv_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_first_name_label"
            android:layout_toRightOf="@id/tv_first_name_label"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@{human.firstName}" />

        <TextView
            android:id="@+id/tv_last_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_first_name_label"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/label_last_name" />

        <TextView
            android:id="@+id/tv_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_last_name_label"
            android:layout_toRightOf="@id/tv_last_name_label"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@{human.lastName}" />


        <TextView
            android:id="@+id/tv_age_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_last_name_label"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/label_age" />


        <TextView
            android:id="@+id/tv_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_age_label"
            android:layout_alignBaseline="@id/tv_age_label"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@{String.valueOf(human.age)}"
            />

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_update_first_name"
            android:text="@={human.firstName}"
            android:layout_above="@+id/et_last_name"
            />

        <EditText
            android:id="@id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_update_last_name"
            android:text="@={human.lastName}"
            android:layout_above="@+id/btn_update"
            />

        <Button
            android:id="@id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_update"
            android:layout_above="@+id/btn_clicked"
            android:layout_margin="@dimen/fab_margin"
            android:layout_centerHorizontal="true"
            android:onClick="onBtnUpdateClick"
            />

        <Button
            android:id="@id/btn_clicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_click_event"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:tag="0"
            android:onClick="@{handler::onEventButtonClicked}"
            />
    </RelativeLayout>
</layout>